# zdppy_elasticsearch

./: .gitignore  README.md  build.sh  git.py  main.py  pyproject.toml
zapi_elastic_search/: object.py
zdpapi_elastic_search/: __init__.py  object.py
zdppy_elasticsearch/: __init__.py  elasticsearch.py
