[tool.poetry]
name = "zapi_elastic_search"
version = "0.1.0"
description = ""
authors = ["pygosuperman <pygosuperman@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
elasticsearch = "^7.15.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
